# tasky-backend

./: .gitignore  API.md  README.md  SETUP.md  monorepo.code-workspace
.github/actions/setup-k8s/: action.yaml
.github/workflows/: build-and-deploy-preview.yaml  build-and-deploy.yaml  cleanup-preview.yaml  preview.yaml
auth-service/: AGENTS.md  Dockerfile  pyproject.toml
auth-service/app/: auth.py  config.py  main.py  models.py  schemas.py
helm-charts/: README.md
helm-charts/cert-manager-config/: values.yaml
helm-charts/cert-manager-config/templates/: clusterissuer.yaml
helm-charts/ingress-nginx/: Chart.yaml  values.yaml
helm-charts/ingress-nginx/templates/: all.yaml
helm-charts/microservice/: Chart.yaml  values.yaml
helm-charts/microservice/templates/: configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  postgres.yaml  service.yaml
helm-charts/values/: auth-service-prod.yaml  auth-service-testing.yaml  tasks-service-prod.yaml  tasks-service-testing.yaml
k8s/: AGENTS.md
k8s/argocd/: applications.yaml  applicationset-preview.yaml
k8s/auth-service/: deployment.yaml  kustomization.yaml
k8s/ingress/: cert-manager-clusterissuer.yaml  ingress.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/namespaces/: testing.yaml
k8s/overlays/preview/: ingress.yaml  (+1 more)
k8s/secrets/: generate-secrets.sh
k8s/tasks-service/: deployment.yaml  kustomization.yaml
scripts/: generate-secrets.sh
tasks-service/: AGENTS.md  Dockerfile  pyproject.toml
tasks-service/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
(+22 files in other folders)
